--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "onepoint",
+            "name": "Qun",
             "email": "qun@onepoint.com.tw"
         }
     ],
