讓 laravel 7.X 也可以安裝

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Laravel dashboard repository and views",
     "type": "library",
     "require": {
-        "laravel/framework": "^6.2"
+        "laravel/framework": ">=6.2"
     },
     "license": "MIT",
     "authors": [
